--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.29.1",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.5",
+    "mysql2": "^2.2.5",
     "nodemon": "^2.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -30,6 +31,7 @@
     "react-simple-image-slider": "^2.1.0",
     "react-slideshow-image": "^3.4.6",
     "redux": "^4.1.0",
+    "sequelize": "^6.6.4",
     "sharp": "^0.28.1",
     "web-vitals": "^1.0.1"
   },
