--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.5",
     "mysql2": "^2.2.5",
-    "nodemon": "^2.0.7",
+    "nodemon": "^2.0.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-moment": "^1.1.1",
@@ -58,5 +58,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^6.2.0"
   }
 }
