--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express-validator": "^2.21.0",
     "util": "^0.12.4",
     "winston": "^3.3.3"
